2009-04-02  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs:
	* Gui/NRefactoryResolver.cs: Fixed "Bug 491017 - No
	  intellisense for static LINQ queries".

2009-04-02  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs: Fixed failing unit test.

2009-04-01  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: removed debug messages.

2009-04-01  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed "Bug 491016 - No
	  intellisense for lambdas inside linq query".

2009-04-01  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Added "var" to the
	  completion list.

2009-04-01  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 487226 - No
	  intellisense in LINQ queries" - 2.

2009-04-01  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed "Bug 487237 - Broken lambda
	  intellisense".

2009-04-01  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed "Bug 487226 - No
	  intellisense in LINQ queries".

2009-03-31  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: Worked on C#3 lambda resolving.

2009-03-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Removed debug message.

2009-03-30  Mike Krüger  <mkrueger@novell.com>

	* Parser/NRefactoryParser.cs: implemented 'Bug 363627 - MD
	  text editor does not show folding symbols for preprocessor
	  directives'.

2009-03-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs:
	* Gui/NRefactoryTemplateParameterDataProvider.cs: Implemented
	  "Bug 324888 - Auto complete not activating in generics".

	* Makefile.am:
	* CSharpBinding.csproj: 

2009-03-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Implemented "Bug 324989 -
	  code completion doesn't strip off 'Attribute' part in
	  Attributes".

2009-03-27  Mike Krüger  <mkrueger@novell.com>
